--- a/hicheel11/index.html
+++ b/hicheel11/index.html
@@ -19,17 +19,66 @@
     </header>
     <main>
         <h1 id="about">minii tuhai</h1>
-        
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti, minus vel harum odio fugiat perspiciatis nesciunt, dolorum, earum voluptates nulla tempora? Temporibus, beatae. Minima cumque impedit maxime dolores rerum fugit quis amet, quae officiis sint perspiciatis debitis libero sit tempora? Non, id voluptatum. Reiciendis ut obcaecati eligendi ullam aperiam exercitationem, quos aliquam. Quod nobis, a unde nesciunt vitae delectus autem fuga et voluptate ipsam atque ipsum, temporibus architecto? Ea pariatur illum labore fugit voluptatem nesciunt laborum repellendus commodi praesentium aspernatur iste qui dolore non aperiam recusandae, exercitationem vel debitis consequatur porro alias nobis obcaecati. Reprehenderit ratione repellendus at voluptatibus omnis sunt sapiente blanditiis modi tempora quasi, laboriosam explicabo commodi ad corporis exercitationem tempore quibusdam et illum minus possimus? Recusandae inventore dolorem voluptatibus non est id corporis necessitatibus iure dolorum cum, incidunt delectus natus doloremque. Autem eveniet, quidem quos eligendi saepe ratione magni? Vero nostrum at quaerat incidunt, autem unde? Laborum, eius. Assumenda autem dolorum ut officia nam? Ea ducimus quo libero tempore cupiditate, vero quaerat dicta cumque omnis assumenda nihil expedita ab eius. Aperiam, architecto perferendis aliquid nesc
-        iunt in maxime, labore incidunt cum accusamus praesentium sit voluptatum animi consectetur optio dolor quis? Accusantium ullam sunt autem similique magni nisi!</p>
+        <div id="me">
+            <div><h3>minii ner</h3></div>
+            <div><p>:Undram</p></div>
+        </div>
+        <div id="me">
+            <div><h3>minii nas</h3></div>
+            <div><p>:14</p></div>
+        </div>
+        <div id="me">
+            <div><h3>minii hobby</h3></div>
+            <div><p>:zurag zurah,nom unshih,alhah,...</p></div>
+        </div>
+        <div id="me">
+            <div><h3>minii durtai nom</h3></div>
+            <div><p>:tungalag tamir</p></div>
+        </div>
         <h1 id="hobby">hobby</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut commodi facilis possimus placeat porro sequi, cumque tempore reprehenderit cupiditate ea illum iure nesciunt. Quidem voluptate aliquid, maxime dolorem et assumenda, veritatis sit quas eius praesentium excepturi exercitationem sint architecto esse obcaecati! Deserunt similique molestias corrupti iusto eos alias temporibus quasi aliquid ipsum tempora nam beatae autem earum voluptates debitis illum eius, doloribus deleniti. Inventore debitis magni voluptatibus molestiae, doloribus ullam nulla doloremque accusamus, dolorum ex in laboriosam exercitationem. Cum neque odit corrupti odio assumenda quam ducimus, consequuntur atque, hic corporis vel fugit expedita, quas quis cumque voluptate inventore officiis alias nobis! Corrupti, temporibus omnis dolor non dolorem at, expedita explicabo sequi cupiditate quod adipisci quidem quos eum, veniam quam corporis facilis suscipit! Amet perspiciatis quae deleniti aliquam nesciunt odit harum sint repudiandae eum enim similique nobis ab accusantium ad corporis in et eveniet quidem, eligendi, voluptates facilis itaque consequatur est. Voluptatem minima modi ut doloribus deleniti? Mollitia, impedit similique. Doloribus excepturi dolor adipisci? Aut non veniam, praesentium asperiores vel autem iste ad omnis atque. Magni, architecto veritatis. Illo debitis voluptate quibusdam nisi amet, tempore esse. Debitis minus esse dignissimos repellendus delectus dicta soluta, totam omnis porro facere maiores hic sit.
-             </p>
-        <h1 id="plan">7 tuluvluguu
-        </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, pariatur. Beatae dolorum distinctio dolore quis esse accusantium ratione! Modi perspiciatis in autem dolores rerum, dicta ipsa veniam minus cumque ut quam dolorum provident fugiat recusandae accusamus vel facilis voluptates a incidunt alias distinctio magni officiis. Molestias vero iste maxime a nobis nisi commodi quaerat fugiat perspiciatis natus tempora hic quisquam eius, aut illum aspernatur omnis corporis ipsum beatae fugit? Harum minima, aperiam est eos corrupti iure, beatae similique odio iusto, vel dolor dolores ea. Aspernatur architecto odit tempore a quia quisquam harum autem dicta eos nostrum facilis atque voluptatibus accusantium aliquid ipsam, pariatur nisi quibusdam quaerat voluptates necessitatibus esse voluptate nobis voluptas exercitationem. Obcaecati autem debitis similique cum reprehenderit expedita magni a amet inventore ducimus, laborum adipisci! Sint nostrum vero adipisci. Molestias, incidunt laborum! Tempore a exercitationem velit, eveniet saepe quia corrupti consequatur minima itaque soluta explicabo aperiam placeat. Reiciendis magnam voluptatibus veritatis, libero obcaecati dolor? Architecto, cumque maiores! Qui nam laudantium debitis praesentium, ipsa ratione suscipit quae error aperiam voluptates quas illo. Dicta quaerat voluptas sit modi maxime sequi nemo quo molestiae nisi ipsa? Possimus, tempora natus similique eos eveniet error a vitae quam quo vel laboriosam consequuntur rerum.
-
-        </p>
+        <div id="me" >
+            <div><h3>1.zurag zurah:</h3></div>
+            <div><img src="th.jpg" alt=""></div>
+        </div>
+        <div id="me">
+            <div><h3>2.nom unshih:</h3></div>
+            <div><img src="OIP.jpg" alt=""></div>
+        </div>
+        <div id="me">
+            <div><h3>3.alhah:</h3></div>
+            <div><img src="OIP (1).jpg" alt=""></div>
+        </div>
+        <h1 id="plan">weekly plan</h1>
+        <div class="div1">
+            <div id="_1">
+                <p>monday</p>
+                <li>d</li>
+                <li>q</li>
+            </div>
+          
+            <div id="_1">
+                <p>tuesday</p>
+                <li>a</li>
+                <li>f</li>
+            </div>
+            <div id="_1">
+                <p>wednwsday</p>
+                <li>a</li>
+                <li>f</li>
+            </div>
+            <div id="_1"> <p>thursday</p>
+                <li>a</li>
+                <li>f</li></div>
+            <div id="_1"><p>friday</p>
+                <li>a</li>
+                <li>f</li></div>
+            <div id="_1"><p>saturday</p>
+                <li>a</li>
+                <li>f</li></div>
+            <div id="_1"><p>sunday</p>
+                <li>a</li>
+                <li>f</li></div>
+           </div>
 
     </main>
 </body>
