--- a/hicheel11/index.html
+++ b/hicheel11/index.html
@@ -51,31 +51,31 @@
         <h1 id="plan">weekly plan</h1>
         <div class="div1">
             <div id="_1">
-                <p>monday</p>
+                <p id="p">monday</p>
                 <li>d</li>
                 <li>q</li>
             </div>
           
             <div id="_1">
-                <p>tuesday</p>
+                <p id="p">tuesday</p>
                 <li>a</li>
                 <li>f</li>
             </div>
             <div id="_1">
-                <p>wednwsday</p>
+                <p id="p">wednwsday</p>
                 <li>a</li>
                 <li>f</li>
             </div>
-            <div id="_1"> <p>thursday</p>
+            <div id="_1"> <p id="p">thursday</p>
                 <li>a</li>
                 <li>f</li></div>
-            <div id="_1"><p>friday</p>
+            <div id="_1"><p id="p">friday</p>
                 <li>a</li>
                 <li>f</li></div>
-            <div id="_1"><p>saturday</p>
+            <div id="_1"><p id="p">saturday</p>
                 <li>a</li>
                 <li>f</li></div>
-            <div id="_1"><p>sunday</p>
+            <div id="_1"><p id="p">sunday</p>
                 <li>a</li>
                 <li>f</li></div>
            </div>
