--- a/hicheel7/index.html
+++ b/hicheel7/index.html
@@ -83,14 +83,14 @@
                 <div id="under">
                   
                    <div class="_1">
-                    <div class="img1"><img src="th.jpg" alt=""></div>
+                    <div class="img1"></div>
                     <div class="_1_1">
                         <div class="img1_1"><img src="account.svg" alt=""></div>
                         <div class="description1_1">description</div>
                     </div>
                    </div>
                    <div class="_1">
-                    <div class="img1"><img src="th.jpg" alt=""></div>
+                    <div class="img1"></div>
                     <div class="_1_1">
                         <div class="img1_1">img</div>
                         <div class="description1_1">description</div>
