--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../hicheel u/hicheel11/style.css">
+    <link rel="stylesheet" href="hicheel11/style.css">
 </head>
 <body>
     <header>
@@ -40,15 +40,15 @@
         <h1 id="hobby">hobby</h1>
         <div id="me" >
             <div><h3>1.zurag zurah:</h3></div>
-            <div><img src="th.jpg" alt=""></div>
+            <div><img src="hicheel11/th.jpg" alt=""></div>
         </div>
         <div id="me">
             <div><h3>2.nom unshih:</h3></div>
-            <div><img src="OIP.jpg" alt=""></div>
+            <div><img src="hicheel11/OIP.jpg" alt=""></div>
         </div>
         <div id="me">
             <div><h3>3.alhah:</h3></div>
-            <div><img src="OIP (1).jpg" alt=""></div>
+            <div><img src="hicheel11/OIP (1).jpg" alt=""></div>
         </div>
         <h1 id="plan">weekly plan</h1>
         <div class="div1">
