--- a/hicheel15/index.html
+++ b/hicheel15/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="_6">
             <a href=""  class="abstract"><img id="abstract" src="abstarct1.png" alt=""> Abstract</a>
             <a href="" class="helpcenter">Help Center</a>
         </div>
@@ -90,15 +90,57 @@
      </div>
     </main>
     <footer>
-        <div>
+       <div class="_5">
+        <div class="_3">
             <div id="textheader">Abstract</div>
-            <div>
+            <div id="_3">
                 <a href="">Start trial</a>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="">Pricing</a>
+                <a href="">Download</a>
             </div>
         </div>
-       
+        <div class="_3">
+            <div id="textheader">Resources</div>
+            <div id="_3">
+                <a href="">Blog</a>
+                <a href="">Help Center</a>
+                <a href="">Release Notes</a>
+                <a href="">Status</a>
+            </div>
+        </div>
+        <div class="_3">
+            <div id="textheader">Community</div>
+            <div id="_3">
+                <a href="">Twitter</a>
+                <a href="">Linkedln</a>
+                <a href="">Facebook</a>
+                <a href="">Dribbble</a>
+                <a href="">Podcast</a>
+            </div>
+        </div>
+        <div class="_3">
+            <div id="textheader">Company</div>
+            <div id="_3">
+                <a href="">About us</a>
+                <a href="">Careers</a>
+                <a href="">Legal</a>
+            </div>
+            <div id="textheader">
+                Contact Us
+            </div>
+            <a>info@abstract.com</a>
+        </div>
+       </div>
+        <div class="_4">
+            <div class="abstract"><img id="abstract" src="abstarct1.png" alt=""></div>
+            <div id="_3">
+               <body>
+                &#169;
+               </body> Copyright 2024 
+               Abstract Studio Design, Inc.
+               All rights reserved
+            </div>
+        </div>
     </footer>
     
 </body>
