--- a/hicheel17/index.html
+++ b/hicheel17/index.html
@@ -66,11 +66,193 @@
         </div>
       </div>
       <div class="yellow">
-        <div class="yellow2"><img id="photo-1" src="photo-1.jpg" alt="" /></div>
-        <div class="yellow1">
-          <img id="photo-2" src="photo-2.jpg" alt="" />
+        <div class="background"></div>
+        <div><img id="photo-1" src="photo-1.jpg" alt="" /></div>
+        <div><img id="photo-2" src="photo-2.jpg" alt="" /></div>
+      </div>
+      <div class="_1">
+        <div class="text">
+          <div id="text1">
+            Making music isn’t easy. It takes time, effort, and learning. But
+            when you’re in the flow, it’s incredibly rewarding.
+          </div>
+          <div id="text2">
+            We feel the same way about making Ableton products. The driving
+            force behind Ableton is our passion for what we make, and the people
+            we make it for.
+          </div>
+        </div>
+      </div>
+      <div id="juanpe">
+        <div class="juanpe"><img src="poster-juanpe.png" alt="" /></div>
+        <div class="why"><p>Why Ableton - Juanpe Bolivar</p></div>
+      </div>
+      <div class="_1">
+        <div class="text">
+          <div id="text1">
+            We are more than 350 people from 30 different countries divided
+            between our headquarters in Berlin and our offices in Los Angeles
+            and Tokyo.
+          </div>
+          <div id="text2">
+            Most of us are active musicians, producers, and DJs, and many of us
+            use Live and Push every day. We come from a wide range of cultural
+            and professional backgrounds. Some of us have PhDs, some are
+            self-taught, and most of us are somewhere in between. What connects
+            us is the shared belief that each of us has the skills and knowledge
+            to contribute to something big: helping to shape the future of music
+            culture.
+          </div>
+        </div>
+      </div>
+      <div class="green">
+        <div class="background2"></div>
+        <div id="green">
+          <div><img id="photo-3" src="photo-3.jpg" alt="" /></div>
+          <div><img id="photo-3" src="photo-4.jpg" alt="" /></div>
+        </div>
+        <div class="photo-5"><img id="photo-5" src="photo-5.jpg" alt="" /></div>
+      </div>
+      <div class="_1">
+        <div class="text">
+          <div id="text1">
+            We believe it takes focus to create truly outstanding instruments.
+            We only work on a few products and we strive to make them great.
+          </div>
+          <div id="text2">
+            Rather than having a one-size-fits-all process, we try to give our
+            people what they need to work their magic and grow. We’ve learned
+            that achieving the best results comes from building teams that are
+            richly diverse, and thus able to explore problems from a wider set
+            of perspectives. We don’t always agree with each other, but opinion
+            and debate are valued and openly encouraged.
+          </div>
+        </div>
+      </div>
+      <div class="makers"><img id="makers" src="makers.jpg" alt="" /></div>
+      <div class="_1">
+        <div class="text">
+          <div id="text1">
+            We’re passionate about what we do, but we’re equally passionate
+            about improving who we are.
+          </div>
+          <div id="text2">
+            We work hard to foster an environment where people can grow both
+            personally and professionally, and we strive to create a wealth of
+            opportunities to learn from and with each other.
+          </div>
+          <div id="text2">
+            Alongside an internal training program, employees are actively
+            supported in acquiring new knowledge and skills, and coached on
+            applying these in their daily work. In addition, staff-organized
+            development and music salons are a chance to discuss new
+            technologies, production techniques and best practices.
+          </div>
+        </div>
+      </div>
+      <div class="purple">
+        <div class="background3"></div>
+        <div><img id="photo-6" src="photo-6-a.jpg" alt="" /></div>
+        <div><img id="photo-7" src="photo-7.jpg" alt="" /></div>
+      </div>
+      <div class="_1">
+        <div class="text">
+          <div id="text1">
+            We want our employees to love it here. Since we’re looking for
+            exceptional talent from around the world, we will do everything we
+            can to make your transition as easy as possible.
+          </div>
+          <div id="text2">
+            If you're joining us in Berlin, we'll help with relocation and
+            paperwork. We’ll even provide you with free German or English
+            lessons. Plus, working in Germany means you can expect comprehensive
+            health insurance for you and your family, as well as generous
+            maternity and paternity leave. Office hours are flexible, but it’s
+            not all work; we have several company and team outings throughout
+            the year as well as a variety of fun, informal small-group
+            activities.
+          </div>
+        </div>
+      </div>
+      <div class="blue">
+        <div><img id="photo-8" src="photo-8.jpg" alt="" /></div>
+        <div class="background4">
+          <div class="text5">
+            <div class="text1">
+              We’re really proud of the work we’ve done so far. But there’s so
+              much more to come. If you’d like to be a part of it, please join
+              us.
+            </div>
+            <div class="text2">
+              See latest jobs <img class="download" src="download.png" alt="" />
+            </div>
+          </div>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="text1">Ableton</div>
+      <div class="middle">
+        <div id="_1">
+          <div id="text2">Register Live or Push</div>
+          <div id="text2">About Ableton</div>
+          <div id="text2">Jobs</div>
+        </div>
+        <div id="_1">
+          <div id="text1">Education</div>
+          <div id="text2">Offers for students and teachers</div>
+          <div id="text2">Ableton for the Classroom</div>
+          <div id="text2">Ableton for Colleges and Universities</div>
+        </div>
+        <div id="_1">
+          <div id="text1">Sign up to our newsletter</div>
+          <div id="text2">
+            Enter your email address to stay up to date with the latest offers,
+            tutorials, downloads, surveys and more.
+          </div>
+          <div class="email">
+            <div id="email"></div>
+            <div id=""></div>
+          </div>
+        </div>
+        <div id="_1">
+          <div id="text1">Community</div>
+          <div id="text2">Find Ableton User Groups</div>
+          <div id="text2">Find Certified Training</div>
+          <div id="text2">Become a Certified Trainer</div>
+        </div>
+        <div id="_1">
+          <div id="text1">Language and Location</div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="menu">
+          <div id="text1">Contacts Us</div>
+          <div id="text1">Press Resources</div>
+          <div id="text1">Legal Info</div>
+          <div id="text1">Privacy Policy</div>
+          <div id="text1">Cookie Settings</div>
+          <div id="text1">Imprint</div>
+        </div>
+        <div>
+          Made in BerlinMade in Berlin
+          <svg
+            role="img"
+            aria-label="Logo Ableton"
+            class="main-nav__logo__image"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+            width="45"
+            height="21"
+            viewBox="0 0 45 21"
+          >
+            <path
+              d="M0 
+              0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z"
+            ></path>
+          </svg>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
