--- a/hicheel17/index.html
+++ b/hicheel17/index.html
@@ -193,10 +193,19 @@
     <footer>
       <div class="text1">Ableton</div>
       <div class="middle">
-        <div id="_1">
-          <div id="text2">Register Live or Push</div>
-          <div id="text2">About Ableton</div>
-          <div id="text2">Jobs</div>
+        <div class="_6">
+          <div id="_1">
+            <div id="text2">Register Live or Push</div>
+            <div id="text2">About Ableton</div>
+            <div id="text2">Jobs</div>
+          </div>
+          <div class="logos">
+            <img id="logos" src="facebook.png" alt="" />
+            <img id="logos" src="X-Logo.png" alt="" />
+            <img id="logos" src="youtube.png" alt="" />
+            <img id="logos" src="ig.webp" alt="" />
+            <img id="logos" src="tiktok.png" alt="" />
+          </div>
         </div>
         <div id="_1">
           <div id="text1">Education</div>
@@ -204,6 +213,7 @@
           <div id="text2">Ableton for the Classroom</div>
           <div id="text2">Ableton for Colleges and Universities</div>
         </div>
+
         <div id="_1">
           <div id="text1">Sign up to our newsletter</div>
           <div id="text2">
@@ -211,8 +221,8 @@
             tutorials, downloads, surveys and more.
           </div>
           <div class="email">
-            <div id="email"></div>
-            <div id=""></div>
+            <div id="email"><p>Email Address</p></div>
+            <div id="signup"><p>Sign up</p></div>
           </div>
         </div>
         <div id="_1">
@@ -223,6 +233,16 @@
         </div>
         <div id="_1">
           <div id="text1">Language and Location</div>
+          <div class="_5">
+            <div class="english">
+              <div>English</div>
+              <div><img id="down" src="down.png" alt="" /></div>
+            </div>
+            <div class="mongolia">
+              <div>Mongolia</div>
+              <div><img id="down" src="down.png" alt="" /></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="bottom">
